--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "init-astro",
+  "name": "astro-crash-course",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,8 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.4.9",
     "@astrojs/check": "^0.5.6",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.4.6",
+    "git": "^0.1.5",
+    "npm-git-install": "^0.3.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
